sawtooth-ci/terraform/vpc/route_tables-config.tf
resource "aws_route_table" "public-subnet" {
    vpc_id = "${aws_vpc.environment.id}"

    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = "${aws_internet_gateway.environment.id}"
    }

    tags {
        Name = "${var.environment_name}-public-subnet-route-table"
        Environment = "${var.environment_name}"
    }
}

resource "aws_route_table_association" "public-subnet" {
    subnet_id = "${aws_subnet.public-subnet.id}"
    route_table_id = "${aws_route_table.public-subnet.id}"
}
